# aplikasi_photobooth_flutter

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: date_picker_field.dart  dialog_buttons.dart  dialog_header.dart  export_dialog.dart  folder_selector.dart  layout_dropdown.dart  render_layout_with_photos.dart
lib/models/: event.dart  event_model.dart  layout_model.dart  layouts.dart  preset_model.dart
lib/pages/: event_detail.dart  event_page.dart  layout_editor.dart  layout_manager.dart  layout_manager_page.dart  main_menu.dart  photo_preset_page.dart  sesi_foto.dart  settings.dart  settings_page.dart  start_event.dart
lib/providers/: event_provider.dart  events.dart  layout_changes_stream.dart  layout_editor.dart  layout_editor_listenable.dart  layout_editor_provider.dart  layout_provider.dart  layouts.dart  preset_provider.dart  sesi_foto.dart  settings.dart  settings_provider.dart  start_event.dart
lib/screens/: layout_editor_screen.dart  main_screen.dart
lib/services/: gpu_capture_service.dart  image_processor.dart  screen_capture_service.dart
lib/utils/: compute_utils.dart  isolate_helper.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/dxgi_capture/: CMakeLists.txt  dxgi_capture.cpp  dxgi_capture.h  dxgi_capture_plugin.cpp  dxgi_capture_plugin.h  dxgi_capture_plugin_c_api.cpp  dxgi_capture_plugin_c_api.h
(+62 files in other folders)
